bundle missing dependency so we can build without a VS install.

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -86,7 +86,7 @@ jobs:
         Configuration: ${{ matrix.configuration }}
 
     # Build te application.
-    - name: Restore the application
+    - name: Build the application
       run: msbuild $env:Solution_Name /p:Configuration=$env:Configuration "/p:Platform=$env:Platform"
       env:
         Configuration: ${{ matrix.configuration }}
