--- a/Source/WPF/MyMoney/packages.config
+++ b/Source/WPF/MyMoney/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.115.5" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.115.5" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.115.5" targetFramework="net461" />
 </packages>
