Split MSIX package to separate solution so github workflow is simpler.

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -75,10 +75,10 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
       
-    - name: Install Windows SDK 10.0.18362
-      uses: fbactions/setup-winsdk@v1
-      with:
-        winsdk-build-version: 18362
+    # - name: Install Windows SDK 10.0.18362
+    #   uses: fbactions/setup-winsdk@v1
+    #   with:
+    #     winsdk-build-version: 18362
 
     # Execute all unit tests in the solution
     # - name: Execute unit tests
